--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "3d-react-carousal": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.6.0",
     "react-scripts": "^4.0.3",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
